<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/neuroflexLogoSignIn"
            android:layout_width="354dp"
            android:layout_height="140dp"
            android:src="@drawable/neuroflex_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintVertical_bias="0.608"
            app:layout_constraintBottom_toTopOf="@+id/signInTitle"/>

    <TextView
            android:id="@+id/signInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.384"/>
    <TextView
            android:id="@+id/EmailTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.156" app:layout_constraintVertical_bias="0.484"/>
    <EditText
            android:id="@+id/EmailTextBoxLogin"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:hint="Enter your email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintVertical_bias="0.551"
            android:inputType="textEmailAddress" android:autofillHints="emailAddress"/>

    <ProgressBar
            android:id="@+id/progressBarLogin"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.632" app:layout_constraintHorizontal_bias="0.155"/>
    <EditText
            android:id="@+id/passwordTextBoxLogin"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:hint="@string/enter_your_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.698"
            android:inputType="textPassword" />


    <Button
            android:id="@+id/signInButton"
            android:text="@string/sign_in"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextBoxLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0" android:layout_marginBottom="120dp"/>
    <Button
            android:id="@+id/goToRegisterPage"
            android:text="Click to Register"
            android:textStyle="normal"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_width="182dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.511"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>


</androidx.constraintlayout.widget.ConstraintLayout>