<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageView
            android:id="@+id/neuroflexLogoRegister"
            android:layout_width="406dp"
            android:layout_height="197dp"
            android:src="@drawable/neuroflex_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintVertical_bias="0.029" />

    <TextView
            android:id="@+id/signinTextRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.349"/>

    <TextView
            android:id="@+id/EmailTitleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_bias="0.136" app:layout_constraintVertical_bias="0.449"/>
    <EditText
            android:id="@+id/EmailTextBoxRegister"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:hint="Enter your email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.566" app:layout_constraintVertical_bias="0.499"
            android:inputType="textEmailAddress" android:autofillHints="emailAddress"/>

    <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.587" app:layout_constraintHorizontal_bias="0.195"/>


    <EditText
            android:id="@+id/passwordTextBox"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:hint="@string/enter_your_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintVertical_bias="0.64"
            android:inputType="textPassword" android:autofillHints="password"/>
    <TextView
            android:id="@+id/passwordTitleConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.725" app:layout_constraintHorizontal_bias="0.205"/>

    <EditText
            android:id="@+id/passwordTextBoxConfirm"
            android:layout_width="310dp"
            android:layout_height="48dp"
            android:hint="Confirm your password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.566"
            app:layout_constraintVertical_bias="0.782"
            android:inputType="textPassword"/>
    <ProgressBar
                 android:id="@+id/progressBarRegister"
                 android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:id="@+id/registerButton"
            android:text="create account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/neuroflexLogoRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="390dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.36"/>
    <TextView
            android:id="@+id/goToLogIn"
            android:text="Click to Sign In"
            android:textStyle="normal"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton" tools:layout_editor_absoluteX="0dp"
            app:layout_constraintVertical_bias="0.12"/>

</androidx.constraintlayout.widget.ConstraintLayout>